# hmmb-bujo

./: .gitignore  LEGADO_bujo-digital-planejamento.md  README.md  docker-compose.yml  schema.yaml
backend/: .env.example  conftest.py  pyproject.toml  railway.toml
backend/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_holiday.py
backend/accounts/tests/: factories.py  test_isolation.py  test_models.py  test_views.py
backend/automation/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/automation/migrations/: 0001_initial.py
backend/automation/tests/: factories.py  test_admin.py  test_authentication.py  test_models.py  test_permissions.py  test_services.py  test_settings.py  test_views.py
backend/braindump/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/braindump/migrations/: 0001_initial.py
backend/braindump/tests/: factories.py  test_models.py  test_serializers.py  test_services.py  test_views.py
backend/bujo/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/bujo/migrations/: 0001_initial.py  0002_task_category.py  0003_weekly_monthly_log.py  0004_recurringtasktemplate_remove_task_source_template_id_and_more.py  0005_recurringtasktemplate_category.py  0006_task_waiting_on.py
backend/bujo/services/: archive.py  logs.py  migration.py  recurring.py  state_machine.py  tasks.py
backend/bujo/tests/: factories.py  test_models.py  test_purge_e2e_users.py  test_serializers.py  test_services.py  test_views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  e2e.py  prod.py  test.py
backend/core/: apps.py  authentication.py  calendar.py  context.py  exceptions.py  middleware.py  models.py  pagination.py  services.py  tenant.py  views.py
backend/core/tests/: models.py  registry.py  test_api_contract.py  test_authentication.py  test_calendar.py  test_exceptions.py  test_guardrails.py  test_health.py  test_isolation.py  test_middleware.py  test_services.py
backend/gratitude/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/habits/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_groups.py  views.py
backend/health/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_logs.py  views.py
backend/medications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_doctors.py  urls_time_blocks.py  views.py
(+588 files in other folders)
