[project]
name = "hmmb-bujo-backend"
version = "0.1.0"
description = "Backend Django + DRF do hmmb-bujo (Bullet Journal digital multi-tenant)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = "test_*.py"
testpaths = ["."]
