[project]
name = "hmmb-bujo-backend"
version = "0.1.0"
description = "Backend Django + DRF do hmmb-bujo (Bullet Journal digital multi-tenant)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "import-linter>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = "test_*.py"
testpaths = ["."]

# --- import-linter (port rule, §7.2) -------------------------------------------
# Enforces that `core/` never imports a domain app. The domain apps do not exist
# yet (they arrive one per story in Epic 3+), so they are declared as *external*
# forbidden modules — `include_external_packages = true` lets grimp flag an
# `import bujo` in core even before `bujo` is an installed package. The contract
# is green today (core imports none of them) and turns RED the moment any future
# story wires a domain import into core. When a new domain app is created, add
# its package name to `forbidden_modules` below (verified empirically: a
# fabricated `import bujo` in core breaks this contract — see story 1.2 notes).
[tool.importlinter]
root_packages = ["core", "config"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core must not import domain apps (port rule)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["bujo", "habits", "health", "medications", "gratitude", "braindump"]
